--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "Brian Esparza De La Torre",
   "license": "ISC",
   "dependencies": {
-    "node-cron": "^3.0.0"
+    "axios": "^0.21.1",
+    "node-cron": "^3.0.0",
+    "node-localstorage": "^2.2.1"
   }
 }
